# blocker

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  distribute.yml  labeler.yml  release.yml  tests.yml
src/blocker/: __init__.py  __main__.py  base.py  blocker.py  dnsbl.py  sync.py
src/blocker/data/: dns.spam.yml  logging.yml  text.blocker.yml  text.static.yml
src/blocker/utils/: logger.py
